# OpenglRenderer

./: .gitignore  CMakeLists.txt
game/: CMakeLists.txt  game.cpp
src/: CMakeLists.txt  application.cpp  application.h  game_application.h  log.h  main.cpp
src/context/: app_ctx.h  context.h  input_ctx.h
src/core/: log.cpp  types.h
src/renderer/: mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/renderer/backend/: opengl_api.cpp  opengl_api.h
src/window/: glfw_input.cpp  glfw_input.h  glfw_window.cpp  glfw_window.h  window.h
